
* Current
** Added
Added a greeting to the standard ascension.scm
Added ability to turn on and off echo to make bootup quieter
Added #\a through #\z
Added get-type and set-type! primitives to allow easy addition of new types
Added list pair-up function
Added basic error function to halt in weird edge cases
Added some special chars

** Changed
Altered order of arguments in list_to_string function to simplify assembly implementation
Now hides all new definitions loading
Display string of unbound symbol to aid in debugging
Made assoc more flexible
Made set-type be a copying rather than overwriting operation
Gave assoc better names and let it return nil when none are found

** Fixed
Fixed bug in line comments
Fixed bug in eq? such that it behaves correctly with strings

** Removed
Removed multiple type functions from Slow_lisp binary and into the ascension library
Removed redundent evaluation paths

* 0.2 - 2017-07-19
** Added
Added number?
Added string-append
Added Get-index
Added map
Added filter
Added length
Added string-length
Added eq?
Added fold-left
Added symbol?
Exported apply functionality

** Changed
Changed reverse to not depend on alternate functions

** Fixed

** Removed
Removed reving as it is only needed inside of reverse

* 0.1 - 2017-07-01
** Added
Added inital changelog
Added version message
Added Help message
Added support for multiple definition files
Added Test0 to demonstrate support for quote
Added Test1 to demonstrate support for list, cons, car, cdr, null? and cond
Added test target to make
Added support for raw strings
Added recursive support to integer->char
Added char->integer
Added string->list
Added char?
Added string?
Added list->string
Added initial lisp ascension library
Extending lisp ascension library with reverse, fold-right and a couple char functions
Added cell list reversing primitive

** Changed
Makefile is modified to follow bin standard
Renamed resulting binary to slow_lisp to prevent namespace conflicts in bin